--- a/asset_simulation.html
+++ b/asset_simulation.html
@@ -72,11 +72,11 @@
       <div class="row">
         <div style="flex:1 1 200px">
           <label>初期資産額（A₀）</label>
-          <input id="initAmt" type="number" value="50000000" step="100000">
+          <input id="initAmt" type="number" value="1000000" step="100000">
         </div>
         <div style="flex:1 1 200px">
           <label>年間追加投資額（Aₐₙₙ）</label>
-          <input id="addAmt" type="number" value="4000000" step="100000">
+          <input id="addAmt" type="number" value="120000" step="100000">
         </div>
       </div>
       <div class="note" style="margin-top:6px">
