--- a/static_friction.html
+++ b/static_friction.html
@@ -111,7 +111,7 @@
 
       <div class="row">
         <div class="inline">
-          <label style="margin:0;">押す力 F（N）</label>
+          <label style="margin:0;">押す力 f（N）</label>
           <div class="value"><span id="FVal">0</span> N</div>
         </div>
         <input id="FRange" type="range" min="0" max="600" step="1" value="0" />
@@ -527,7 +527,7 @@ const pushLenPx = state.F * forceScale;
 drawArrow(
   handX, handY,
   handX + pushLenPx, handY,
-  `F=${state.F.toFixed(0)}N`,
+  `f=${state.F.toFixed(0)}N`,
   "#1e5bff"
 );
 
@@ -543,7 +543,7 @@ if (frLenPx > 0.5) {
   drawArrow(
     frictionX, frictionY,
     frictionX + frDir * frLenPx, frictionY,
-    `f=${fr.toFixed(0)}N`,
+    `F=${fr.toFixed(0)}N`,
     "#e11d48",
     12,
     30
